src/test/resources/tokens/invalid/string_unclosed.unpick
unpick v3
group String
    "